src/snapshots/prql__parser__test__parse_to_pest_tree-11.snap
---
source: src/parser.rs
assertion_line: 428
expression: "parse_to_pest_tree(r\"join side:right country [id=employee_id]\",\n                   Rule::transformation)"

---
Ok(
    [
        Pair {
            rule: transformation,
            span: Span {
                str: "join side:right country [id=employee_id]",
                start: 0,
                end: 40,
            },
            inner: [
                Pair {
                    rule: ident,
                    span: Span {
                        str: "join",
                        start: 0,
                        end: 4,
                    },
                    inner: [],
                },
                Pair {
                    rule: named_arg,
                    span: Span {
                        str: "side:right",
                        start: 5,
                        end: 15,
                    },
                    inner: [
                        Pair {
                            rule: ident,
                            span: Span {
                                str: "side",
                                start: 5,
                                end: 9,
                            },
                            inner: [],
                        },
                        Pair {
                            rule: ident,
                            span: Span {
                                str: "right",
                                start: 10,
                                end: 15,
                            },
                            inner: [],
                        },
                    ],
                },
                Pair {
                    rule: ident,
                    span: Span {
                        str: "country",
                        start: 16,
                        end: 23,
                    },
                    inner: [],
                },
                Pair {
                    rule: list,
                    span: Span {
                        str: "[id=employee_id]",
                        start: 24,
                        end: 40,
                    },
                    inner: [
                        Pair {
                            rule: items,
                            span: Span {
                                str: "id=employee_id",
                                start: 25,
                                end: 39,
                            },
                            inner: [
                                Pair {
                                    rule: ident,
                                    span: Span {
                                        str: "id",
                                        start: 25,
                                        end: 27,
                                    },
                                    inner: [],
                                },
                                Pair {
                                    rule: operator,
                                    span: Span {
                                        str: "=",
                                        start: 27,
                                        end: 28,
                                    },
                                    inner: [],
                                },
                                Pair {
                                    rule: ident,
                                    span: Span {
                                        str: "employee_id",
                                        start: 28,
                                        end: 39,
                                    },
                                    inner: [],
                                },
                            ],
                        },
                    ],
                },
            ],
        },
    ],
)
