src/snapshots/prql__parser__test__parse_to_pest_tree-12.snap
---
source: src/parser.rs
assertion_line: 438
expression: "parse_to_pest_tree(r\"right_join country [id=employee_id]\",\n                   Rule::transformation)"

---
Ok(
    [
        Pair {
            rule: transformation,
            span: Span {
                str: "right_join country [id=employee_id]",
                start: 0,
                end: 35,
            },
            inner: [
                Pair {
                    rule: ident,
                    span: Span {
                        str: "right_join",
                        start: 0,
                        end: 10,
                    },
                    inner: [],
                },
                Pair {
                    rule: ident,
                    span: Span {
                        str: "country",
                        start: 11,
                        end: 18,
                    },
                    inner: [],
                },
                Pair {
                    rule: list,
                    span: Span {
                        str: "[id=employee_id]",
                        start: 19,
                        end: 35,
                    },
                    inner: [
                        Pair {
                            rule: items,
                            span: Span {
                                str: "id=employee_id",
                                start: 20,
                                end: 34,
                            },
                            inner: [
                                Pair {
                                    rule: ident,
                                    span: Span {
                                        str: "id",
                                        start: 20,
                                        end: 22,
                                    },
                                    inner: [],
                                },
                                Pair {
                                    rule: operator,
                                    span: Span {
                                        str: "=",
                                        start: 22,
                                        end: 23,
                                    },
                                    inner: [],
                                },
                                Pair {
                                    rule: ident,
                                    span: Span {
                                        str: "employee_id",
                                        start: 23,
                                        end: 34,
                                    },
                                    inner: [],
                                },
                            ],
                        },
                    ],
                },
            ],
        },
    ],
)
