src/snapshots/prql__parser__test__parse_to_pest_tree-2.snap
---
source: src/parser.rs
assertion_line: 403
expression: "parse_to_pest_tree(r#\"USA\"#, Rule::string)"

---
Ok(
    [
        Pair {
            rule: string,
            span: Span {
                str: "USA",
                start: 0,
                end: 3,
            },
            inner: [],
        },
    ],
)
