src/snapshots/prql__parser__test__parse_to_pest_tree-3.snap
---
source: src/parser.rs
assertion_line: 304
expression: "parse_to_pest_tree(\"select [a, b, c]\", Rule::transformation)"

---
Ok(
    [
        Pair {
            rule: transformation,
            span: Span {
                str: "select [a, b, c]",
                start: 0,
                end: 16,
            },
            inner: [
                Pair {
                    rule: ident,
                    span: Span {
                        str: "select",
                        start: 0,
                        end: 6,
                    },
                    inner: [],
                },
                Pair {
                    rule: list,
                    span: Span {
                        str: "[a, b, c]",
                        start: 7,
                        end: 16,
                    },
                    inner: [
                        Pair {
                            rule: ident,
                            span: Span {
                                str: "a",
                                start: 8,
                                end: 9,
                            },
                            inner: [],
                        },
                        Pair {
                            rule: ident,
                            span: Span {
                                str: "b",
                                start: 11,
                                end: 12,
                            },
                            inner: [],
                        },
                        Pair {
                            rule: ident,
                            span: Span {
                                str: "c",
                                start: 14,
                                end: 15,
                            },
                            inner: [],
                        },
                    ],
                },
            ],
        },
    ],
)
