src/snapshots/prql__parser__test__parse_to_pest_tree-4.snap
---
source: src/parser.rs
assertion_line: 395
expression: "parse_to_pest_tree(\"aggregate by:[title, country] [sum salary]\",\n                   Rule::transformation)"

---
Ok(
    [
        Pair {
            rule: transformation,
            span: Span {
                str: "aggregate by:[title, country] [sum salary]",
                start: 0,
                end: 42,
            },
            inner: [
                Pair {
                    rule: ident,
                    span: Span {
                        str: "aggregate",
                        start: 0,
                        end: 9,
                    },
                    inner: [],
                },
                Pair {
                    rule: named_arg,
                    span: Span {
                        str: "by:[title, country]",
                        start: 10,
                        end: 29,
                    },
                    inner: [
                        Pair {
                            rule: ident,
                            span: Span {
                                str: "by",
                                start: 10,
                                end: 12,
                            },
                            inner: [],
                        },
                        Pair {
                            rule: list,
                            span: Span {
                                str: "[title, country]",
                                start: 13,
                                end: 29,
                            },
                            inner: [
                                Pair {
                                    rule: ident,
                                    span: Span {
                                        str: "title",
                                        start: 14,
                                        end: 19,
                                    },
                                    inner: [],
                                },
                                Pair {
                                    rule: ident,
                                    span: Span {
                                        str: "country",
                                        start: 21,
                                        end: 28,
                                    },
                                    inner: [],
                                },
                            ],
                        },
                    ],
                },
                Pair {
                    rule: list,
                    span: Span {
                        str: "[sum salary]",
                        start: 30,
                        end: 42,
                    },
                    inner: [
                        Pair {
                            rule: items,
                            span: Span {
                                str: "sum salary",
                                start: 31,
                                end: 41,
                            },
                            inner: [
                                Pair {
                                    rule: ident,
                                    span: Span {
                                        str: "sum",
                                        start: 31,
                                        end: 34,
                                    },
                                    inner: [],
                                },
                                Pair {
                                    rule: ident,
                                    span: Span {
                                        str: "salary",
                                        start: 35,
                                        end: 41,
                                    },
                                    inner: [],
                                },
                            ],
                        },
                    ],
                },
            ],
        },
    ],
)
