src/snapshots/prql__parser__test__parse_to_pest_tree-5.snap
---
source: src/parser.rs
assertion_line: 409
expression: "parse_to_pest_tree(r#\"    filter country = \"USA\"\"#, Rule::transformation)"

---
Ok(
    [
        Pair {
            rule: transformation,
            span: Span {
                str: "    filter country = \"USA\"",
                start: 0,
                end: 26,
            },
            inner: [
                Pair {
                    rule: ident,
                    span: Span {
                        str: "filter",
                        start: 4,
                        end: 10,
                    },
                    inner: [],
                },
                Pair {
                    rule: ident,
                    span: Span {
                        str: "country",
                        start: 11,
                        end: 18,
                    },
                    inner: [],
                },
                Pair {
                    rule: operator,
                    span: Span {
                        str: "=",
                        start: 19,
                        end: 20,
                    },
                    inner: [],
                },
                Pair {
                    rule: string,
                    span: Span {
                        str: "USA",
                        start: 22,
                        end: 25,
                    },
                    inner: [],
                },
            ],
        },
    ],
)
